# src/main/java/com/ivanfrias/company/common/exceptions/mappers/ModelMapperConfig.java
@@ -2,7 +2,9 @@ package com.ivanfrias.company.common.exceptions.mappers;
 
 import com.ivanfrias.companies.model.CategoryDTO;
 import com.ivanfrias.companies.model.CompanyDTO;
+import com.ivanfrias.companies.model.OrderDTO;
 import com.ivanfrias.company.company.dao.entities.CompanyEntity;
+import com.ivanfrias.company.orders.dao.entities.OrderEntity;
 import com.ivanfrias.company.products.dao.entities.CategoryEntity;
 import org.modelmapper.Converter;
 import org.modelmapper.ModelMapper;
@@ -33,6 +35,7 @@ public class ModelMapperConfig {
         configureProductMapping(mapper);
         configureCategoryMapping(mapper);
         configureUserMapping(mapper);
+        configureOrderMapping(mapper);
 
         return mapper;
     }
@@ -62,4 +65,17 @@ public class ModelMapperConfig {
         });
     }
     private void configureUserMapping(ModelMapper mapper) {}
+    private void configureOrderMapping(ModelMapper mapper) {
+        mapper.typeMap(OrderEntity.class, OrderDTO.class).addMappings(m -> {
+            m.using(zonedToOffset).map(OrderEntity::getCreatedAt, OrderDTO::setCreatedAt);
+            m.using(zonedToOffset).map(OrderEntity::getUpdatedAt, OrderDTO::setUpdatedAt);
+            m.map(OrderEntity::isDelivered, OrderDTO::setIsDelivered);
+        });
+
+        mapper.typeMap(OrderDTO.class, OrderEntity.class).addMappings(m -> {
+            m.using(offsetToZoned).map(OrderDTO::getCreatedAt, OrderEntity::setCreatedAt);
+            m.using(offsetToZoned).map(OrderDTO::getUpdatedAt, OrderEntity::setUpdatedAt);
+            m.map(OrderDTO::getIsDelivered, OrderEntity::setDelivered);
+        });
+    }
 }
