# src/main/java/com/ivanfrias/company/orders/controllers/OrderController.java
@@ -3,6 +3,7 @@ package com.ivanfrias.company.orders.controllers;
 import com.ivanfrias.companies.api.OrdersApi;
 import com.ivanfrias.companies.model.OrderDTO;
 import com.ivanfrias.companies.model.OrderRequestDTO;
+import com.ivanfrias.companies.model.UserDTO;
 import com.ivanfrias.company.common.exceptions.utils.ControllerUtils;
 import com.ivanfrias.company.common.exceptions.utils.UnauthorizedException;
 import com.ivanfrias.company.orders.services.OrderService;
@@ -10,6 +11,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 import static com.ivanfrias.company.common.exceptions.utils.ControllerUtilsConstants.STRING_NO_PREMISSIONS;
 
@@ -27,5 +30,14 @@ public class OrderController extends ControllerUtils implements OrdersApi {
 
         Long userId = getAllClaims().get("user_id", Long.class);
         return ResponseEntity.ok(orderService.createOrder(orderRequestDTO, userId));
+    }
+
+    @Override
+    public ResponseEntity<List<OrderDTO>> getOrders() {
+        if(!checkIsUser()){
+            throw new UnauthorizedException(STRING_NO_PREMISSIONS);
+        }
+        Long userId = getAllClaims().get("user_id", Long.class);
+        return ResponseEntity.ok(orderService.getOrders(userId));
     }
 }
